# raytracer

./: .gitignore  CMakeLists.txt  README.md  canvas.cpp  color.cpp  color.h  light.h  matrix.cpp  matrix.h  object.h  ray.cpp  ray.h  sphere.cpp  sphere.h  tuple.cpp  tuple.h  vec.cpp
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  raytracer
src/: CMakeLists.txt  canvas.h  intersection.h  main.cpp  material.h  point.h  transformations.cpp  transformations.h  vec.h
src/tests/: main_projectile.cpp
tests/: main_matrix.cpp  readme.txt
